--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,109 @@
-body,html {
+:root {
+  --baseColorNo: 308;
+}
+
+body, html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-size: 14px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+}
+
+.timelineContainer {
+  position: relative;
+  width: 900px;
 }
 
 .timeline {
-  width: 800px;
+  width: 100%;
   height: 2px;
+  background-color: black;
+  z-index: 4;
+}
+
+
+#junior, #designer, #pm{
+  position: relative;
+  left: 9%;
+}
+
+#junior {
+  width: 11%;
+}
+
+#designer {
+  width: 20%;
+}
+
+#pm {
+  width: 50%;
+}
+
+#junior .resp {
+  height: 20px;
+  background-color: hsla(var(--baseColorNo), 20%, 60%, 0.7);
+  position: relative;
+  top: 40px;
+  width: 650%;
+  z-index: 3;
+}
+
+#designer .resp {
+  height: 40px;
+  background-color: hsla(var(--baseColorNo), 50%, 60%, 0.7);
+  position: relative;
+  top: 20px;
+  width: 330%;
+  z-index: 2;
+}
+
+#pm .resp {
+  height: 60px;
+  background-color: hsla(var(--baseColorNo), 70%, 50%, 0.7);
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+
+#junior .period, #designer .period, #pm .period {
+  width: 100%;
+  border-left: 1px dashed black;
+  height: 100px;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  top: 70px;
+  padding-left: 5px;
+}
+
+.list {
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-style: italic;
+  font-size: 13px;
+}
+
+.timePeriod {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.point {
+  width: 2px;
+  height: 10px;
   background-color: black;
 }
 
-.junior{
-  width: 100px;
-  height: 20px;
-  background-color: pink;
-}
-
-.designer{
-  width: 100px;
-  height: 40px;
-  background-color: grey;
-}
-.pm{
-  width: 100px;
-  height: 50px;
-  background-color: purple;
+.year {
+  display: flex;
+  align-self: center;
 }
 
 .experience {
   display: flex;
-  align-items: flex-end;
 }
